Refactor ComposableIndexTemplate construction to use builder